works_fix - spacing, Title letter space, boxes more rectangular, correct font family, button wider
news_fix - add letter space to the title, the item more rectangular, badge coded add space

feature_fix - title bigger, correct font family, reduce space, bg parallax

contact_fix - add width, correct font family, allign icons

footer_fix - Logo Smaller, Table

footer_fix - logo wider, text bigger, line thinner

--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -7,7 +7,10 @@
     color: $light-grey;
 
     &--footer {
-      padding: 20px 0 0 0;
+      padding: 10px 0 0 0;
+      font-size: 1.6rem;
+      font-family: $ff-yugothic;
+      color: #333;
     }
   }
 
@@ -15,5 +18,11 @@
     height: 64px;
     width: 244px;
     object-fit: contain;
+
+    &--footer {
+      height: 50px;
+      width: 190px;
+      object-fit: contain;
+    }
   }
 }
